<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="emailHint">Email</string>
    <string name="passwdHint">Password</string>
    <string name="btnLoginText">Iniciar sesión</string>
    <string name="createAccountText">Si no tienes una cuenta resgístrate aquí</string>
    <string name="userNameHint">Nombre de usuario</string>
    <string name="btnRegisterText">Registrarme</string>
    <string name="backToLoginText">Si ya tienes una cuenta,inicia sesión aquí</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>